init: setup auth too!

--- a/package.json
+++ b/package.json
@@ -27,17 +27,15 @@
     "migration:revert": "npm run build && npm run typeorm -- migration:revert -d ./dist/ormconfig.js"
   },
   "dependencies": {
-    "@apollo/server": "^4.10.0",
-    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "dayjs": "^1.11.10",
     "google-auth-library": "^9.6.3",
-    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
